--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿aiohappyeyeballs==2.6.1
+aiohappyeyeballs==2.6.1
 aiohttp==3.11.18
 aiosignal==1.3.2
 annotated-types==0.7.0
@@ -14,6 +14,7 @@ cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
+comtypes==1.4.9
 datasets==3.6.0
 dill==0.3.8
 distro==1.9.0
@@ -39,6 +40,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 jiter==0.10.0
 MarkupSafe==3.0.2
+MouseInfo==0.1.3
 mpmath==1.3.0
 multidict==6.4.3
 multiprocess==0.70.16
@@ -55,15 +57,25 @@ propcache==0.3.1
 pvporcupine==3.0.5
 pyarrow==20.0.0
 PyAudio==0.2.14
+PyAutoGUI==0.9.54
 pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
 pydub==0.25.1
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
 pyparsing==3.2.1
 pyperclip==1.9.0
+pypiwin32==223
+PyRect==0.2.0
+PyScreeze==1.0.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+pyttsx3==2.98
+pytweening==1.2.0
 pytz==2025.2
+pywhatkit==5.4
+pywin32==308
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.4
